--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   text-align: center;
 }
 
+
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +38,52 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+h2{
+  color: white;
+}
+
+.home-body{
+  background-color: black;
+}
+
+.nav-item{
+  color:white;
+  /* 밑줄 */
+  text-decoration: none;
+  /* 간격 */
+  margin-right: 20px;
+}
+
+.banner{
+  height: 600px;
+  display: flex;
+  align-items: center;
+}
+.banner::before{
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 600px;
+  content: '';
+  background: linear-gradient(to top, black,transparent);
+}
+
+.banner-info{
+  width: 40%;
+  margin-left: 30px;
+  color: white;
+  z-index: 1;
+}
+.movie-card{
+  width: 300px;
+  height: 200px !important;
+}
+
+.overlay{
+  opacity: 0;
+}
+.movie-card:hover .overlay{
+  opacity: 1;
 }
